@@ -41,8 +41,14 @@ sets the value of a
 header to a specified value.
 .SH OPTIONS
 .TP
+.BI \-d " dirnumber"
+change the current directory (starting at 0).
+.TP
 .BI \-s " tagnumber" "\fR [\fP" " count" "\fR ]\fP" " value ..."
 Set the value of the named tag to the value or values specified.
+.TP
+.BI \-sd " diroffset"
+change the current directory by offset.
 .TP
 .BI \-sf " tagnumber filename"
 Set the value of the tag to the contents of filename.  This option is
@@ -70,6 +76,14 @@ This example sets the resolution of the file a.tif to 300 dpi:
 tiffset \-s 296 2 a.tif
 tiffset \-s 282 300.0 a.tif
 tiffset \-s 283 300.0 a.tif
+.fi
+.RE
+.PP
+Set the photometric interpretation of the third page of a.tif to
+min-is-black (ie. inverts it):
+.RS
+.nf
+tiffset -d 2 -s 262 1 a.tif
 .fi
 .RE
 .SH "SEE ALSO"
